--- a/resources/wikifab-style-flowcountertalks.css
+++ b/resources/wikifab-style-flowcountertalks.css
@@ -12,7 +12,7 @@
     vertical-align: middle;
     white-space: nowrap;
     text-align: center;
-    background-color: #777777;
+    background-color: #30373b;
     border-radius: 10px;
     margin-left: 3px;
 }
